--- a/Frontend/messages/css/messages.css
+++ b/Frontend/messages/css/messages.css
@@ -102,12 +102,22 @@ main .shadow {
   overflow-y: auto;
   flex-grow: 1;
   padding-bottom: 1em;
-  box-shadow: 0px -20px 5px -10px black inset;
+  box-shadow: 0 -20px 5px -10px black inset;
+  scroll-behavior: smooth;
 }
 
 .message {
   width: 100%;
   position: relative;
+  transition: 1s ease;
+}
+
+.message.new {
+  transform: scale(0.5);
+}
+
+.unread {
+  transform: scale(1);
 }
 
 .message > p {
@@ -122,6 +132,10 @@ main .shadow {
 }
 
 .message:hover > p {
+  color: white;
+}
+
+.unread > p {
   color: white;
 }
 
@@ -151,6 +165,16 @@ main .shadow {
   background-color: rgba(23, 23, 23, 1);
 }
 
+.unread .notification {
+  background-color: rgba(74, 74, 74, 0.6);
+  box-shadow: 0 0 10px 3px #4A4A4A;
+  border: 1px solid white;
+}
+
+.unread .notification:hover {
+  background-color: rgba(74, 74, 74, 1);
+}
+
 .notification.interactive {
   cursor: pointer;
   border: 1px solid #3D76E1;
@@ -160,6 +184,16 @@ main .shadow {
 
 .notification.interactive:hover {
   background: rgba(61, 118, 225, 0.6);
+}
+
+.unread .notification.interactive {
+  background: rgba(38, 153, 251, 0.4);
+  box-shadow: 0 0 10px 3px #4A4A4A, 0 0 12px 1px #2699FB inset;
+  border: 1px solid white;
+}
+
+.unread .notification.interactive:hover {
+  background: rgba(38, 153, 251, 0.75);
 }
 
 .notification .symbol {
