--- a/Frontend/header/css/header.css
+++ b/Frontend/header/css/header.css
@@ -389,8 +389,8 @@ header .profile {
 
 .user-profile {
   border-radius: 3px;
-  top: -10%;
-  right: -5%;
+  top: -5rem;
+  right: -8rem;
   position: fixed;
   width: 90%;
   height: auto;
@@ -644,7 +644,8 @@ header .profile {
     height: 150%;
   }
 
-  header:hover {
+  header:hover,
+  header.open-menu {
     transform: translateY(50%);
   }
 
@@ -663,7 +664,8 @@ header .profile {
     transform: rotate(-30deg);
   }
 
-  header:hover .menu {
+  header:hover .menu,
+  header.open-menu .menu {
     left: -0.5rem;
     transform: rotate(-5deg);
   }
@@ -673,7 +675,8 @@ header .profile {
     transform: rotate(30deg);
   }
 
-  header:hover .profile {
+  header:hover .profile,
+  header.open-menu .profile {
     right: -0.5rem;
     transform: rotate(5deg);
   }
@@ -685,6 +688,12 @@ header .profile {
 
   .user-profile {
     font-size: 0.8rem;
+    top: -3rem;
+    right: -5rem;
+  }
+
+  .user-profile.open {
+    top: 8rem;
   }
 }
 
