--- a/Frontend/mail/css/mail.css
+++ b/Frontend/mail/css/mail.css
@@ -81,6 +81,10 @@ body {
   text-shadow: 2px 2px 6px black;
 }
 
+.mail-content h3:first-child {
+  margin-top: 0;
+}
+
 a.choose-clubs {
   position: relative;
   margin-left: 2rem;
@@ -301,7 +305,7 @@ a.primary-button.cancel:hover:before {
   .mail-content {
     margin: 0 auto;
     width: 75%;
-    padding: 0;
+    padding: 4rem 0 2rem;
   }
 }
 
