--- a/Frontend/material-inputs/css/material-inputs.css
+++ b/Frontend/material-inputs/css/material-inputs.css
@@ -275,6 +275,32 @@ input {
     opacity: 0.8;
 }
 
+.error {
+    position: absolute;
+    left: 0;
+    top: calc(100% + 1em);
+    border: 2px solid #F71735;
+    width: 100%;
+    border-radius: 5px;
+    padding: 0.5em;
+    background: linear-gradient(90deg, rgba(34, 34, 34, 0.9) 65%, rgba(178, 58, 72, 0.95));
+    z-index: 100;
+    text-align: left;
+}
+
+.error i {
+    font-size: 2em;
+    color: #F71735;
+    vertical-align: middle;
+    margin: 0 0.25em 0.1em 0;
+}
+
+.error .message {
+    vertical-align: middle;
+    font-size: 1.25em;
+    line-height: 1.75;
+}
+
 /*
     CHECKBOX
 
@@ -1167,10 +1193,13 @@ input {
 
 .file-input-container {
     position: relative;
-    border: 1px solid black;
     display: inline-block;
-    white-space: nowrap;
     cursor: pointer;
+    text-align: center;
+    padding: 0.5em;
+    font-size: 1rem;
+    max-width: 15rem;
+    word-break: break-word;
 }
 
 .file-input-container input {
@@ -1181,15 +1210,32 @@ input {
     width: 0;
 }
 
-.file-input-container i {
+.file-input-container > i {
     font-size: 3em;
     padding: 0.75rem;
     border-radius: 50%;
     background-color: #3D76E1;
+    margin-bottom: 0.25em;
+    transition: transform 0.1s ease-out 0s, background-color 0.2s ease;
 }
 
-.file-input-container .text {
+.file-input-container:hover > i {
+    transform: scale(1.25);
+    transition: transform 0.1s ease-out 0.3s, background-color 0.2s ease;
+    background-color: #2699FB;
+}
+
+.file-input-container .file-name {
     display: block;
+    font-weight: bold;
+    font-size: 1.25em;
+    word-wrap: normal;
+    max-width: 100%;
+    transition: 0.2s ease;
+}
+
+.file-input-container:hover .file-name {
+    color: #2699FB;
 }
 
 /*
