--- a/Frontend/login/css/login.css
+++ b/Frontend/login/css/login.css
@@ -52,13 +52,18 @@ body {
   height: 100%;
   width: 100%;
   background-color: #222222;
-  perspective: 1000px;
   overflow: hidden;
   background-image: url("../images/background.svg");
   background-size: 300px;
   background-position: center;
   background-repeat: repeat;
   position: relative;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .light-fighter {
@@ -71,7 +76,7 @@ body {
   left: 50%;
   transform: translate(-45%, -45%) scale(0.3);
   transition: transform 2.25s ease-in, opacity 1s ease;
-  transition-delay: 0.5s;
+  transition-delay: 0.25s;
   opacity: 0;
 }
 
@@ -86,7 +91,7 @@ body {
   left: 50%;
   box-shadow: 0 0 50px 60px white;
   transition: transform 2s ease-in, opacity 1s ease;
-  transition-delay: 0.75s;
+  transition-delay: 0.5s;
   opacity: 0;
 }
 
@@ -104,153 +109,326 @@ main {
   width: 100%;
   height: 100%;
   background: linear-gradient(135deg, transparent 49%, rgba(255, 255, 255, 0.4) 50%, transparent 51%);
+  padding: 3rem;
+  position: relative;
 }
 
-.modal-window {
-  opacity: 0.9;
-  position: fixed;
-  width: 25em;
-  height: 20em;
-  top: 50%;
+main p {
+  position: absolute;
+  font-size: 2rem;
+  width: calc(100% - 6rem);
+  top: calc(50% - 22rem);
   left: 50%;
-  z-index: 100;
-  max-height: 80%;
   transform: translate(-50%, -50%);
-  transition: 1s ease;
-  font-size: 1rem; /* ADJUST Size individually */
+  z-index: 10;
+  transition: 0.5s ease;
 }
 
-.modal-window.sent {
-  transform: translate(-50%, -50%) scale(0);
+.sent p {
   opacity: 0;
 }
 
-.modal-window .modal-window-header {
+main p span {
+  color: #3D76E1;
+}
+
+main .arrow {
+  width: 100px;
+  height: auto;
+  filter: drop-shadow(2px 2px 3px black);
   position: absolute;
-  width: 80%;
-  height: 100%;
-  top: -35%;
-  transform: translateX(-50%);
-  left: 50%;
-  border-left: 2px solid #2699FB;
-  box-shadow: 1px 1px 5px black;
-  z-index: 1;
-  padding: 0.5em 0;
+  top: calc(50% - 15rem);
+  left: 70%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
   transition: 0.5s ease;
-  border-radius: 0.5em 0 0 0.5em;
 }
 
-.modal-window:hover .modal-window-header {
-  top: -50%;
-  border-left: 6px solid #2699FB;
+main.welcome-done .arrow {
+  opacity: 1;
 }
 
-.darkmode .modal-window .modal-window-header {
-  background-color: #303030;
-  color: white;
-  text-shadow: 1px 1px 3px white;
-  font-weight: bold;
-  box-shadow: 3px 3px 13px 3px black;
+body.sent .arrow {
+  opacity: 0;
 }
 
-.modal-window-header p {
-  width: 60%;
-  margin: 0;
-  padding: 0.5em 0 0 1em;
-  font-size: 2.5em;
-}
-
-.modal-window .mw-content {
-  position: relative;
-  height: 100%;
-  width: 25em;
-  top: 10%;
-  left: 0;
-  box-shadow: 5px 5px 15px 5px black;
-  transition: 0.5s ease;
-  background: radial-gradient(farthest-corner at bottom right, #4A4A4A 60%, rgba(38, 153, 251, 0.8));
-  z-index: 2;
-  padding-top: 1em;
+.login-container {
+  background: radial-gradient(circle at 100% 100%, #303030 65%, #3D76E1);
+  position: absolute;
+  top: 55%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  min-width: 20rem;
+  width: 50%;
+  max-width: 50rem;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px 2px black;
+  padding: 1rem 3rem 3rem;
   overflow: hidden;
+  border: 10px solid rgba(0, 0, 0, 0.3);
+  z-index: 5;
+  transition: 0.5s ease;
 }
 
-.modal-window .mw-content:before {
+.login-container.sent {
+  transform: translate(-50%, -50%) scale(0.3);
+  opacity: 0;
+  left: 50%;
+}
+
+.login-container:before {
   content: '';
   position: absolute;
+  top: -70%;
+  left: 70%;
   width: 100%;
   height: 100%;
-  background-color: #171717;
-  opacity: 0.4;
-  top:  -75%;
-  left: 50%;
-  transition: 0.5s ease;
   border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.25);
+  transition: 0.5s ease;
 }
 
-.modal-window:hover .mw-content {
-  top: 15%;
+.login-container:hover:before {
+  transform: scale(1.25);
 }
 
-.modal-window:hover .mw-content:before {
-  left: 55%;
-  top: -85%;
-  transform: scale(1.5);
+.login-container.transition {
+  transform: translate(-50%, -50%) scale(0.8);
+  left: 25%;
+  z-index: 10;
 }
 
-form .row {
-  margin: 2.5em auto;
+.login-container h1 {
+  font-size: 3rem;
+  margin: 1rem 0 5rem;
+  text-shadow: 2px 2px 8px black;
+}
+
+.login-container .input-container {
+  margin-bottom: 3rem;
+}
+
+.login-container .input-container:last-of-type {
+  margin-bottom: 2rem;
+}
+
+.login-container a {
+  display: inline-block;
   position: relative;
-  width: 70%;
-  text-align: center;
-}
-
-form button {
-  position: relative;
-  bottom: 0;
-  right: 1.5em;
-  border: none;
-  float: right;
-  padding: 0.5em 0;
-  cursor: pointer;
+  font-size: 1.25rem;
+  color: #3D76E1;
   transition: 0.2s ease;
-  margin-top: 1.5em;
-  font-size: 1.25em;
-  width: 6em;
+  margin-top: -1rem;
 }
 
-form button:before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #222222;
-  opacity: 0.3;
-  width: 70%;
-  height: 130%;
-  z-index: -1;
-  transition: 0.2s ease;
-}
-
-.darkmode form button {
-  background-color: #222222;
-  color: white;
-}
-
-form button:hover,
-form button:focus {
-  right: 2em;
-  width: 5em;
-  background-color: #4A4A4A;
+.login-container a:hover,
+.login-container a:focus {
   color: #2699FB;
 }
 
-form button:hover:before,
-form button:focus:before{
+.login-container .secondary-button,
+.registration-container .secondary-button {
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  display: inline-block;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  background: #171717;
+  transition: 0.5s ease;
+  font-size: 1em;
+  width: 10em;
+  height: auto;
+  border: 2px solid #3D76E1;
+  color: white;
+  padding: 0.5em 1.5em;
+  float: right;
+  margin-top: 5rem;
+}
+
+.registration-container .secondary-button {
+  width: auto;
+  padding: 0.5em 2em;
+  margin-top: 5rem;
+}
+
+.secondary-button.delete {
+  border-color: #B23A48;
+  color: #B23A48;
+  transition: background-color 0.2s ease 0s, color 0.2s ease 0s, border 0.2s ease 0s;
+}
+
+.secondary-button.disabled {
+  border-color: #4A4A4A;
+  color: #4A4A4A;
+  cursor: not-allowed;
+}
+
+.secondary-button.abort {
+  border-color: #B23A48;
+}
+
+.secondary-button:not(.disabled):hover,
+.secondary-button:not(.disabled):focus {
+  border: 2px solid #2699FB;
+  color: #2699FB;
+}
+
+.secondary-button:not(.disabled).delete:hover {
+  border: 2px solid #171717;
+  color: #171717;
+  background-color: #F71735;
+  transition: background-color 0.2s ease 0.7s, color 0.2s ease 0.7s, border-color 0.2s ease 0.7s;
+}
+
+.secondary-button:not(.disabled).abort:hover {
+  border: 2px solid #F71735;
+  color: #F71735;
+}
+
+.secondary-button:before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  width: calc(100% + 6px);
+  height: calc(100% - 1em);
+  background: #171717;
+  top: 0.5em;
+  left: -3px;
+  transition: 0.5s ease;
+}
+
+.secondary-button:after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  width: calc(100% - 1em);
+  height: calc(100% + 4px);
+  background: #171717;
+  top: -2px;
+  left: 0.5em;
+  transition: 0.5s ease;
+}
+
+.secondary-button.delete:before,
+.secondary-button.delete:after {
+  transition-delay: 0.3s;
+}
+
+.secondary-button:not(.disabled):hover:before,
+.secondary-button:not(.disabled):focus:before {
+  top: 50%;
+  height: 0;
+}
+
+.secondary-button:not(.disabled):hover:after,
+.secondary-button:not(.disabled):focus:after {
+  left: 50%;
+  width: 0;
+}
+
+.secondary-button.delete:hover:before,
+.secondary-button.delete:focus:before,
+.secondary-button.delete:hover:after,
+.secondary-button.delete:focus:after {
+  transition-delay: 0s;
+}
+
+.secondary-button .text {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: block;
+  font-size: 1.5em;
+  overflow: hidden;
+  z-index: 10;
+}
+
+.secondary-button .ripple {
+  position: absolute;
+  background-color: white;
   transform: translate(-50%, -50%);
-  height: 125%;
-  width: 110%;
-  opacity: 1;
+  border-radius: 50%;
+  animation: ripple 1s ease-out infinite;
+  pointer-events: none;
+}
+
+@keyframes ripple {
+  from {
+    width: 0;
+    height: 0;
+    opacity: 0.7;
+  }
+  to {
+    width: 50rem;
+    height: 50rem;
+    opacity: 0;
+  }
+}
+
+.registration-container {
+  background: radial-gradient(circle at 0% 100%, #303030 65%, #3D76E1);
+  position: absolute;
+  top: 55%;
+  left: 65%;
+  transform: translate(-50%, -50%) scale(1);
+  min-width: 20rem;
+  width: 50%;
+  max-width: 50rem;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px 2px black;
+  padding: 1rem 3rem 3rem;
+  overflow: hidden;
+  border: 10px solid rgba(0, 0, 0, 0.3);
+  z-index: 10;
+  transition: 0.5s ease;
+}
+
+.registration-container.sent {
+  transform: translate(-50%, -50%) scale(0.3);
+  opacity: 0;
+  left: 50%;
+}
+
+.registration-container h1 {
+  font-size: 3rem;
+  margin: 1rem 0 5rem;
+  text-shadow: 2px 2px 8px black;
+}
+
+.registration-container .input-container {
+  margin-bottom: 3rem;
+}
+
+.registration-container:before {
+  content: '';
+  position: absolute;
+  top: 70%;
+  left: -70%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.25);
+  transition: 0.5s ease;
+}
+
+.registration-container:hover:before {
+  transform: scale(1.25);
+}
+
+.small {
+  min-width: 30rem;
+  transform: translate(-50%, -50%) scale(0.6);
+  z-index: 1;
+}
+
+.registration-container.transition {
+  transform: translate(-50%, -50%) scale(0.8);
+  left: 80%;
+  z-index: 10;
 }
 
 @media only screen and (min-width: 600px) {
@@ -258,37 +436,28 @@ form button:focus:before{
 }
 
 @media only screen and (min-width: 768px) {
-  html {
-    font-size: 1em;
-  }
+
 }
 
 @media only screen and (min-width: 992px) {
-
-  .modal-window .modal-window-header {
-    width: 100%;
-    height: 80%;
-    top: 50%;
-    transform: translateY(-50%);
-    left: -15%;
+  main p {
+    font-size: 3rem;
+    max-width: 95rem;
+    top: calc(50% - 24rem);
   }
 
-  .modal-window:hover .modal-window-header {
-    top: 50%;
-    left: -50%;
+  main .arrow {
+    width: 150px;
+    top: calc(50% - 15rem);
+    left: calc(50% + 15rem);
   }
 
-  .modal-window .mw-content {
-    top: 0;
+  .login-container {
+    left: calc(50% - 10rem);
   }
 
-  .modal-window:hover .mw-content {
-    top: 0;
-    left: 15%;
-  }
-
-  .modal-window-header p {
-    padding: 2rem 0 0 2rem;
+  .registration-container {
+    left: calc(50% + 10rem);
   }
 }
 
