--- a/Frontend/mail/css/mail.css
+++ b/Frontend/mail/css/mail.css
@@ -85,49 +85,49 @@ body {
   margin-top: 0;
 }
 
-a.choose-clubs {
-  position: relative;
-  margin-left: 2rem;
-  float: left;
-  display: inline-block;
-  padding: 0.5rem 2rem;
-}
-
-.darkmode a.choose-clubs {
-  background-color: #272727;
-  color: #2699FB;
-}
-
-a.choose-clubs:hover {
-  background-color: #2699FB;
-  color: #272727;
-}
-
-a.choose-clubs.disabled {
-  background-color: #272727;
-}
-
 div.chosen-clubs {
   margin: 1rem 0;
+  padding: 0.5rem 1rem 0 1rem;
   display: block;
+  border-bottom: 2px solid #3D76E1;
+  background-color: rgba(0, 0, 0, 0.25);
+  vertical-align: bottom;
+  max-height: 13.5rem;
+  overflow-y: auto;
 }
 
-.chosen-clubs .club-container {
-  background-color: #272727;
+.chosen-clubs .to {
+  font-size: 1.25rem;
+  vertical-align: top;
+  line-height: 2.5rem;
+  margin-right: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.chosen-clubs .club {
+  background-color: #222222;
   border-radius: 50px;
   height: 2.5rem;
   display: inline-block;
   padding-left: 1rem;
   margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  transition: 0.2s ease;
+  font-size: 1rem;
 }
 
-.club-container .club-name {
+.club:hover {
+  background-color: #303030;
+  cursor: pointer;
+}
+
+.club .club-name {
   position: relative;
-  top: -0.9rem;
   margin-right: 0.5rem;
+  top: -0.9rem;
 }
 
-.club-container a {
+.club a {
   border-radius: 50%;
   height: 2.5rem;
   width: 2.5rem;
@@ -135,36 +135,37 @@ div.chosen-clubs {
   text-align: center;
   top: 0;
   display: inline-block;
+  transition: 0.2s ease;
 }
 
-.club-container a:hover {
-  background-color: #4A4A4A;
+.club:hover a {
+  background-color: #222222;
 }
 
-.club-container a i {
+.club a:hover {
+  background-color: #B23A48;
+}
+
+.club a i {
   font-size: 1.5rem;
   padding: 0.25rem;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: 0.2s ease;
 }
 
-.club-container a:hover i {
-  color: #8D0909;
+.club:hover a i {
+  color: #B23A48;
+}
+
+.club a:hover i {
+  color: #222222;
 }
 
 form.mail-content .radio-input-container {
   font-size: 1.25rem;
-}
-
-.modal-window form {
-  width: 100%;
-}
-
-.modal-window .all-clubs {
-  width: 75%;
-  margin: 0 auto;
 }
 
 a.primary-button {
@@ -263,6 +264,158 @@ a.primary-button.cancel:hover:before {
   top: 100%;
   opacity: 1;
   transform: translate(-50%, -50%) translateZ(15px);
+}
+
+.secondary-button {
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  margin: 1rem 0 1.5rem 2.5rem;
+  cursor: pointer;
+  display: inline-block;
+  background: #171717;
+  transition: 0.5s ease;
+  font-size: 1em;
+  height: auto;
+  border: 2px solid #3D76E1;
+  color: white;
+  padding: 0.5em 1.5em;
+}
+
+.secondary-button.delete {
+  border-color: #B23A48;
+  color: #B23A48;
+  transition: background-color 0.2s ease 0s, color 0.2s ease 0s, border 0.2s ease 0s;
+}
+
+.secondary-button.abort {
+  border-color: #B23A48;
+}
+
+.secondary-button.disabled {
+  color: #4A4A4A;
+  border-color: #4A4A4A;
+  cursor: not-allowed;
+}
+
+.secondary-button:hover,
+.secondary-button:focus {
+  border: 2px solid #2699FB;
+  color: #2699FB;
+}
+
+.secondary-button.delete:focus,
+.secondary-button.delete:hover {
+  border: 2px solid #171717;
+  color: #171717;
+  background-color: #F71735;
+  transition: background-color 0.2s ease 0.7s, color 0.2s ease 0.7s, border-color 0.2s ease 0.7s;
+}
+
+.secondary-button.abort:focus,
+.secondary-button.abort:hover {
+  border: 2px solid #F71735;
+  color: #F71735;
+}
+
+.secondary-button.disabled:focus,
+.secondary-button.disabled:hover {
+  color: #4A4A4A;
+  border-color: #4A4A4A;
+}
+
+.secondary-button:before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  width: calc(100% + 6px);
+  height: calc(100% - 1em);
+  background: #171717;
+  top: 0.5em;
+  left: -3px;
+  transition: 0.5s ease;
+}
+
+.secondary-button:after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  width: calc(100% - 1em);
+  height: calc(100% + 4px);
+  background: #171717;
+  top: -2px;
+  left: 0.5em;
+  transition: 0.5s ease;
+}
+
+.secondary-button.delete:before,
+.secondary-button.delete:after {
+  transition-delay: 0.3s;
+}
+
+.secondary-button:hover:before,
+.secondary-button:focus:before {
+  top: 50%;
+  height: 0;
+}
+
+.secondary-button:hover:after,
+.secondary-button:focus:after {
+  left: 50%;
+  width: 0;
+}
+
+.secondary-button.delete:hover:before,
+.secondary-button.delete:focus:before,
+.secondary-button.delete:hover:after,
+.secondary-button.delete:focus:after {
+  transition-delay: 0s;
+}
+
+.secondary-button.disabled:hover:before,
+.secondary-button.disabled:focus:before {
+  height: calc(100% - 1em);
+  top: 0.5em;
+}
+
+.secondary-button.disabled:hover:after,
+.secondary-button.disabled:focus:after {
+  width: calc(100% - 1em);
+  left: 0.5em;
+}
+
+.secondary-button .text {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: block;
+  font-size: 1.5em;
+  overflow: hidden;
+  z-index: 10;
+}
+
+.secondary-button .ripple {
+  position: absolute;
+  background-color: white;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  animation: ripple 1s ease-out infinite;
+  pointer-events: none;
+}
+
+@keyframes ripple {
+  from {
+    width: 0;
+    height: 0;
+    opacity: 0.7;
+  }
+  to {
+    width: 50rem;
+    height: 50rem;
+    opacity: 0;
+  }
 }
 
 .envelope {
