--- a/Frontend/secondary-button/css/secondary-button.css
+++ b/Frontend/secondary-button/css/secondary-button.css
@@ -31,7 +31,7 @@ body {
   letter-spacing: 0.1em;
   text-transform: uppercase;
   background: #171717;
-  transition: 0.5s ease;
+  transition: 0.5s ease, background-color 0.5s;
   font-size: 1.2em;
   width: 15em;
   height: auto;
@@ -50,22 +50,42 @@ body {
   border-color: #B23A48;
 }
 
+.secondary-button.disabled {
+  color: #4A4A4A;
+  border-color: #4A4A4A;
+  cursor: not-allowed;
+}
+
 .secondary-button:hover,
 .secondary-button:focus {
   border: 2px solid #2699FB;
   color: #2699FB;
 }
 
+.secondary-button.delete:focus,
 .secondary-button.delete:hover {
   border: 2px solid #171717;
   color: #171717;
   background-color: #F71735;
-  transition: background-color 0.2s ease 0.7s, color 0.2s ease 0.7s, border-color 0.2s ease 0.7s;
+  transition: background-color 0.2s ease 0.6s, color 0.2s ease 0.6s, border-color 0.2s ease 0.6s;
 }
 
+.secondary-button.abort:focus,
 .secondary-button.abort:hover {
   border: 2px solid #F71735;
   color: #F71735;
+}
+
+.secondary-button.disabled:focus,
+.secondary-button.disabled:hover {
+  color: #4A4A4A;
+  border-color: #4A4A4A;
+}
+
+.secondary-button.clicked {
+  transition: background-color 0.1s;
+  background-color: #4A4A4A;
+  box-shadow: 0 0 10px 3px black;
 }
 
 .secondary-button:before {
@@ -77,7 +97,7 @@ body {
   background: #171717;
   top: 0.5em;
   left: -3px;
-  transition: 0.5s ease;
+  transition: 0.4s ease;
 }
 
 .secondary-button:after {
@@ -89,7 +109,7 @@ body {
   background: #171717;
   top: -2px;
   left: 0.5em;
-  transition: 0.5s ease;
+  transition: 0.4s ease;
 }
 
 .secondary-button.delete:before,
@@ -116,6 +136,18 @@ body {
   transition-delay: 0s;
 }
 
+.secondary-button.disabled:hover:before,
+.secondary-button.disabled:focus:before {
+  height: calc(100% - 1em);
+  top: 0.5em;
+}
+
+.secondary-button.disabled:hover:after,
+.secondary-button.disabled:focus:after {
+  width: calc(100% - 1em);
+  left: 0.5em;
+}
+
 .secondary-button .text {
   position: relative;
   width: 100%;
@@ -126,26 +158,4 @@ body {
   font-size: 1.5em;
   overflow: hidden;
   z-index: 10;
-}
-
-.secondary-button .ripple {
-  position: absolute;
-  background-color: white;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  animation: ripple 1s ease-out infinite;
-  pointer-events: none;
-}
-
-@keyframes ripple {
-  from {
-    width: 0;
-    height: 0;
-    opacity: 0.7;
-  }
-  to {
-    width: 50rem;
-    height: 50rem;
-    opacity: 0;
-  }
 }
