--- a/Frontend/messages/css/messages.css
+++ b/Frontend/messages/css/messages.css
@@ -199,6 +199,26 @@ main .shadow {
   background: rgba(38, 153, 251, 0.75);
 }
 
+.notification.error {
+  border: 1px solid #B23A48;
+  background: rgba(178, 58, 72, 0.4);
+  box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px #B23A48 inset;
+}
+
+.notification.error:hover {
+  background: rgba(178, 58, 72, 0.6);
+}
+
+.notification.success {
+  border: 1px solid #20BF55;
+  background: rgba(32, 191, 85, 0.4);
+  box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px #20BF55 inset;
+}
+
+.notification.success:hover {
+  background: rgba(32, 191, 85, 0.6);
+}
+
 .notification .symbol {
   position: absolute;
   left: 0.25em;
@@ -208,8 +228,16 @@ main .shadow {
   float: left;
 }
 
-.notification .symbol.warning {
+.notification.warning .symbol {
   color: #FFF275;
+}
+
+.notification.error .symbol {
+  color: #F71735;
+}
+
+.notification.success .symbol {
+  color: #20BF55;
 }
 
 .notification p {
@@ -235,10 +263,6 @@ main .shadow {
 
 .notification.interactive p:before {
   background-color: #171717;
-}
-
-.notification:hover p {
-
 }
 
 .notification.interactive a {
