--- a/Frontend/components/table/table.html
+++ b/Frontend/components/table/table.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../css/material-icons-font.css" type="text/css" />
 
     <!-- Specific style -->
+    <link rel="stylesheet" href="../../css/components/material-inputs.css" type="text/css" />
     <link rel="stylesheet" href="../../css/components/primary-button.css" type="text/css" />
     <link rel="stylesheet" href="../../css/components/secondary-button.css" type="text/css" />
     <link rel="stylesheet" href="../../css/components/modal.css" type="text/css" />
@@ -53,36 +54,6 @@
         <div id="filter-starter" class="filter-container clearfix">
             <p>Filter:</p>
             <div class="chosen-filters">
-                <span class="filter">
-                    <span class="filter-details">
-                        <span class="filter-column">Verein</span>
-                        :
-                        <span class="filter-value">SV-Tora</span>
-                    </span>
-                    <a class="delete-button">
-                        <i class="material-icons">close</i>
-                    </a>
-                </span>
-                <span class="filter">
-                    <span class="filter-details">
-                        <span class="filter-column">Verein</span>
-                        :
-                        <span class="filter-value">SV-Tora</span>
-                    </span>
-                    <a class="delete-button">
-                        <i class="material-icons">close</i>
-                    </a>
-                </span>
-                <span class="filter">
-                    <span class="filter-details">
-                        <span class="filter-column">Verein</span>
-                        :
-                        <span class="filter-value">SV-Tora</span>
-                    </span>
-                    <a class="delete-button">
-                        <i class="material-icons">close</i>
-                    </a>
-                </span>
             </div>
             <a class="secondary-button add-filter">
                 <span class="text">
@@ -149,15 +120,6 @@
                     </th>
                     <th>
                         <a class="sort">
-                        <span class="column-header">Kategorie</span>
-                            <span class="icon">
-                                <i class="material-icons">expand_less</i>
-                                <i class="material-icons">expand_more</i>
-                            </span>
-                        </a>
-                    </th>
-                    <th>
-                        <a class="sort">
                         <span class="column-header">Verein</span>
                             <span class="icon">
                                 <i class="material-icons">expand_less</i>
@@ -174,9 +136,8 @@
                     <td data-column="Name">Popopopopovvovovovovovovovovovovov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -194,9 +155,8 @@
                     <td data-column="Name">Städler</td>
                     <td data-column="Vorname">Markus</td>
                     <td data-column="Alter">22</td>
-                    <td data-column="Geschlecht">Definitiv männlich</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">100. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">Nicht bei euch</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -214,9 +174,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">20</td>
-                    <td data-column="Geschlecht">Schon männlich</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -234,9 +193,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">VS am Arsch</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -254,9 +212,8 @@
                     <td data-column="Name">Hagen</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -274,9 +231,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Bummsbube</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">w</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -294,9 +250,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">w</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -314,9 +269,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">w</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -334,9 +288,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -354,9 +307,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -374,9 +326,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -394,9 +345,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -414,9 +364,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -434,9 +383,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -454,9 +402,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -474,9 +421,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -494,9 +440,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -514,9 +459,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -534,9 +478,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
@@ -554,9 +497,8 @@
                     <td data-column="Name">Popopopopov</td>
                     <td data-column="Vorname">Marcus</td>
                     <td data-column="Alter">21</td>
-                    <td data-column="Geschlecht">m?</td>
+                    <td data-column="Geschlecht">m</td>
                     <td data-column="Graduierung">6. Dan</td>
-                    <td data-column="Kategorie">1</td>
                     <td data-column="Verein">SV Tora</td>
                     <td data-column="Aktionen">
                         <a class="primary-button edit" href="#">
